ingress/flask-hello-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-hello-v1
  namespace: flask-hello
spec:
  ports:
    - port: 80
      targetPort: flask-port
      protocol: TCP
  selector:
    app: flask-hello-v1

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flask-hello-v1
  namespace: flask-hello
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-hello-v1
    spec:
      containers:
      - name: flask-hello-v1
        image: barrymoo/flask-hello:v1
        ports:
        - name: flask-port
          containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: flask-port
          initialDelaySeconds: 15
          timeoutSeconds: 30
