ingress/flask-hello-v2.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flask-hello-deploy-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-hello-v2
    spec:
      containers:
      - name: flask-hello-v2
        image: barrymoo/flask-hello:v2
        ports:
        - name: flask-port
          containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: flask-port
          initialDelaySeconds: 15
          timeoutSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: flask-hello-svc-v2
spec:
  ports:
    type: NodePort
    - port: 80
      targetPort: flask-port
      protocol: TCP
  selector:
    app: flask-hello-v2
