ingress/flask-hello-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-hello-ing
  namespace: flask-hello
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.kubernetes.barry-moore-ii.com
      http:
        paths:
          - path: /
            backend:
              serviceName: flask-hello-v1
              servicePort: 80
          - path: /v1
            backend:
              serviceName: flask-hello-v1
              servicePort: 80
          - path: /v2
            backend:
              serviceName: flask-hello-v2
              servicePort: 80
